# doubleml-rag

./: .gitignore  README.md  pyproject.toml
eval/: golden.yaml  labeling_dump.txt  results.jsonl
notebooks/: eval_results.ipynb
scripts/: _patch_notebook.py  collect_corpus.py  ingest.py  label_ground_truth.py  query.py  rejudge_faithfulness.py  run_eval.py  run_no_rag_ablation.py
src/doubleml_rag/: config.py
src/doubleml_rag/eval/: judges.py  metrics.py
src/doubleml_rag/generation/: answerer.py
src/doubleml_rag/ingestion/: chunker.py  embedder.py  loaders.py  store.py
src/doubleml_rag/retrieval/: retriever.py
